fix: support multiple CORS origins (comma-separated)